[package]
name = "physics_fuckery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kiss3d = {path = "../kiss3d"}
rapier3d = {version = "0.15.0" , features = [ "simd-stable" ] }
# nalgebra = "0.31.2"

[[bin]]
name = "test"
path = "hello_world/hello_world.rs"

[[bin]]
name = "bowling"
path = "src/main.rs"

[[bin]]
name = "kiss_test"
path = "hello_rendering/kiss3d_test.rs"
